2004-07-10  Pierre-Luc Paour <gallery@paour.com> (1.4-RC1)

	* Fixed hidden image bug in slideshow applet.

2004-07-09  Pierre-Luc Paour <gallery@paour.com> (1.4-b17)

	* When the session expires, GR now attempts to login again.
	* Fixed duplicate extra field
	* Added a warning when EXIF data is about to be dumped by Java resize
	* Enabled silent install in the ZeroG installer.

2004-06-24  Pierre-Luc Paour <gallery@paour.com> (1.4-b16)

	* New Album dialog now prevents user from attempting to create
	  a new album inside an album where the user doesn't have
	  privileges to do so. Bug 925434.

2004-06-21  Pierre-Luc Paour <gallery@paour.com> (1.4-b15)

	* Improved DE language file (thanks Joerg Napp).
	* Attempted to fix a bug with urlFull handling in embedded applets.

2004-06-02  Pierre-Luc Paour <gallery@paour.com> (1.4-b14)

	* Resize before upload is now a 1-dimension editable ComboBox
	  of popular sizes, like Gallery.
	* Fixed displaying information at the bottom of slideshow.
	* When constraining to aspect ratio while cropping, now
	  able to use portrait and landscape of aspect ratio.
	* Fixed EXIF support to trim spaces.

2004-05-18  Pierre-Luc Paour <gallery@paour.com> (1.4-b13)

	* Added support for non-8bit characters in album and image data.
	  If GR is running in a non-international system and the default
	  font used by Java is not able to display the text correctly,
	  the FONT_OVERRIDE_* properties can force GR to use any system
	  font.
	  This only works if the album and image data are encoded by
	  Gallery in HTML entities (&#xxxx;). When adding albums and
	  images, it only works if automatic HTML escaping is on.
	* Added support for running GR in l10n-development mode by setting
	  uiLocaleDev=true in the prefs. This will load the language files
	  from img/ so they're easy to modify.
	* Fixed a problem in the applet where using the applet and then
	  moving to another tab and coming back would result in the list