@@ -1,36 +1,0 @@
-<html>
-<head>
-<title>GR Applet Test</title>
-</head>
-<body>
-<p>GR Applet Test</p>
-<object
-		classid="clsid:8AD9C840-044E-11D1-B3E9-00805F499D93"
-		codebase="http://java.sun.com/products/plugin/autodl/jinstall-1_4_2-windows-i586.cab#Version=1,4,2,0"
-		width="300" height="120">
-	<param name="code" value="com.gallery.GalleryRemote.GRApplet">
-	<param name="archive" value="GalleryRemoteApplet.jar,img.jar,lib/metadata-extractor-2.1.jar">
-	<param name="type" value="application/x-java-applet;jpi-version=1.4.2">
-	<param name="scriptable" value="false">
-	<param name="gr_url" value="http://localhost:8080/gallery">
-
-	<comment>
-		<embed
-				type="application/x-java-applet;jpi-version=1.4.2"
-				code="com.gallery.GalleryRemote.GRApplet"
-				archive="GalleryRemoteApplet.jar,img.jar,lib/metadata-extractor-2.1.jar"
-				width="300"
-				height="120"
-				scriptable="false"
-				pluginspage="http://java.sun.com/products/plugin/index.html#download"
-				gr_url="http://localhost:8080/gallery">
-			<noembed
-					alt="Your browser understands the &lt;APPLET&gt; tag but isn't running the applet, for some reason.">
-				Your browser is completely ignoring the &lt;APPLET&gt; tag!
-			</noembed>
-
-		</embed>
-	</comment>
-</object>
-</body>
-</html>
